Agregado estilos CSS para la lista de elementos

--- a/acerca-de.html
+++ b/acerca-de.html
@@ -11,6 +11,7 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="styles/styles-base.css">
   <link rel="stylesheet" href="styles/styles-acercade.css">
+
 </head>
 
 <body>
@@ -49,6 +50,8 @@
       </ul>
     </nav>
   </header>
+
+
   <main>
     <a href="#top">
       <i class="fas fa-angle-double-up"></i>
@@ -62,6 +65,9 @@
 
     <section class="recent-article text-center my-4">
       <div class="text-container mt-4">
+        <div class="img-container">
+          <img src="/img/acerca-de/presentacion.jpg" class="img-fluid imagen-despues-titulo">
+        </div>
         <p>
           En CinemaFusion Films nos especializamos en la producción, distribución y venta de películas del género de
           horror que te helarán la sangre y te robarán el sueño. Desde nuestra fundación, nos hemos comprometido a
@@ -72,16 +78,21 @@
 
     <section class="recent-article text-center my-4">
       <h3>Nuestro Compromiso</h3>
+      <div class="img-container">
+        <img src="/img/acerca-de/equipo.jpg" class="img-fluid imagen-despues-titulo">
+      </div>
       <div class="text-container mt-4">
         <p>Nos dedicamos a proporcionar experiencias cinematográficas inmersivas que cautiven a nuestros espectadores y
           los transporten a través de emocionantes historias llenas de suspense y horror. Cada película en nuestro
           catálogo está meticulosamente seleccionada para ofrecer momentos de terror visceral y reflexión profunda.</p>
-
       </div>
     </section>
 
     <section class="recent-article text-center my-4">
       <h3>Explora Nuestro Oscuro Mundo</h3>
+      <div class="img-container">
+        <img src="/img/acerca-de/Explorar.jpg" class="img-fluid imagen-despues-titulo">
+      </div>
       <div class="text-container mt-4">
         <p>
           Nuestro catálogo abarca desde clásicos icónicos hasta innovadoras obras contemporáneas que exploran lo más
@@ -93,6 +104,9 @@
 
     <section class="recent-article text-center my-4">
       <h3>Equipo Apasionado</h3>
+      <div class="img-container">
+        <img src="/img/acerca-de/equipoapacionado.jpg" class="img-fluid imagen-despues-titulo">
+      </div>
       <div class="text-container mt-4">
         <p>
           Detrás de cada producción hay un equipo de talentosos cineastas y creativos que comparten una fascinación por
@@ -104,6 +118,9 @@
 
     <section class="recent-article text-center my-4">
       <h3>Conecta con Nosotros</h3>
+      <div class="img-container">
+        <img src="/img/acerca-de/cinema.jpg" class="img-fluid imagen-despues-titulo">
+      </div>
       <div class="text-container mt-4">
         <p>
           Únete a nuestra comunidad en nuestras redes sociales para descubrir las últimas novedades, interactuar con el
@@ -112,19 +129,18 @@
         </p>
       </div>
     </section>
-
-
+    
     <section class="recent-article text-center my-4">
+      <div class="text-container mt-4">
         <h2>Autores del Proyecto</h2>
-        <div class="text-container mt-4">
-            <ul>
-                <li>Mariano Aquino</li>
-                <li>Joaquín Abal</li>
-                <li>Nico Brites</li>                
-                <li>Matías Cantero</li>           
-                <li>Alexis Aranda</li>
-            </ul>
-        </div>
+        <ul>
+          <li><a href="https://www.linkedin.com/in/mariano-nicolas-aquino/" target="_blank">Mariano Aquino</a></li>
+          <li><a href="https://www.linkedin.com/in/joaquin-abal/" target="_blank">Joaquín Abal</a></li>
+          <li><a href="https://www.linkedin.com/in/nicolas-brites-vergara-83485b1b3/" target="_blank">Nicolás Brites</a></li>
+          <li><a href="https://www.linkedin.com/in/i-matiascantero/" target="_blank">Matías Cantero</a></li>
+          <li><a href="https://www.linkedin.com/in/cristian-jorge-valverde/" target="_blank">Alexis Aranda</a></li>
+        </ul>
+      </div>
     </section>
   </main>
 
