correccion acentos que no detecta el font

--- a/contacto.html
+++ b/contacto.html
@@ -71,14 +71,12 @@
       <div class="container-2-bloques">
         <div class="bloque">
           <h3>Capital Federal</h3>
-          <br>
           <p>Horarios de atencion : Lunes a Viernes de 10 a 18Hs</p>
           <div class="iframe-container">
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.822235586908!2d-58.380524223392!3d-34.60865635776064!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccad18308bb79%3A0x6ac2dbd8335ca774!2sAv.%20de%20Mayo%20811%2C%20C1084AAD%20Cdad.%20Aut%C3%B3noma%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1714323104905!5m2!1ses!2sar"
               allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
-          <br>
         </div>
         <div class="bloque">
           <div class="form-contacto">
@@ -126,14 +124,10 @@
           </div>
         </div>
       </div>
-      <br><br>
-      <div class="text-center">
+      <div class="text-center contacto-wpp">
         <h3>O sino comunicate por whatsapp</h3>
-        <br>
         <a href="https://wa.me/+5491134298740/?text=tu%20texto%20personalizado" target="_blank"><img
             src="/img\whatsapp.png" width="5%"></a>
-        <br><br>
-        <br><br>
       </div>
     </section>
   </main>
