--- a/novedades.html
+++ b/novedades.html
@@ -62,7 +62,7 @@
           </div>
           <section  class="container mt-4">
           <div class="recent-article text-center my-4">
-            <h3>ARTÍCULO MÁS RECIENTE</h3>
+            <h3>ARTÍCULO MAS RECIENTE</h3>
           </div>
     
           <div class="article-content">
@@ -96,7 +96,7 @@
             </div>
     
             <div class="otros-articulos mt-5">
-              <h3 class="text-center">Otros Artículos:</h3>
+              <h3 class="text-center">Otros Articulos:</h3>
               <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
                   <a href="/articulos/strangers.html"
