--- a/contacto.html
+++ b/contacto.html
@@ -130,6 +130,10 @@
         <a href="https://wa.me/+5491134298740/?text=tu%20texto%20personalizado" target="_blank"><img
             src="/img\whatsapp.png" width="5%"></a>
       </div>
+      <div class="boton-volador">
+      <br><br><br><br><br>
+        <button id="runawayButton">Si no te gusto el diseño de la pagina hace click acá</button>
+      </div>
     </section>
   </main>
 
