--- a/pago.html
+++ b/pago.html
@@ -4,13 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registrarse</title>
+    <title>Pago</title>
     <link rel="icon" type="image/png" href="img/icon-fav.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/styles-base.css">
     <link rel="stylesheet" href="styles/styles-registro.css">
+    <link rel="stylesheet" href="styles/styles-formulario.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 
 <body>
@@ -67,22 +69,25 @@
                     <p class="mt-3 mb-3">*Por el momento solo aceptamos debito</p>
 
                     <h3>Ingresa los datos de la Tarjeta</h3>
-                    <label for="titular">Nombre del titular</label>
-                    <input type="text" id="titular" name="titular" required>
+                    <form onsubmit="return validarFormulario()">
 
-                    <label for="numero">Numero de la tarjeta</label>
-                    <input type="number" id="numero" name="numero" required>
+                        <label for="titular">Nombre del titular</label>
+                        <input type="text" id="titular" name="titular" required>
 
-                    <label for="date">Fecha de Vencimiento</label>
-                    <input type="date" id="date" name="date" required>
+                        <label for="numero">Numero de la tarjeta</label>
+                        <input type="number" id="numero" name="numero" required>
 
-                    <label for="codigo">Codigo de seguridad</label>
-                    <input type="number" id="codigo" name="codigo" required>
+                        <label for="date">Fecha de Vencimiento</label>
+                        <input type="date" id="date" name="date" required>
 
-                    <label for="dni">DNI del titular</label>
-                    <input type="number" id="dni" name="dni" required>
+                        <label for="codigo">Codigo de seguridad</label>
+                        <input type="number" id="codigo" name="codigo" required>
 
-                    <button type="submit" class="btn btn-danger btn-rojo">Pagar</button>
+                        <label for="dni">DNI del titular</label>
+                        <input type="number" id="dni" name="dni" required>
+
+                        <button type="submit" class="btn btn-danger btn-rojo">Pagar</button>
+                    </form>
                 </div>
 
                 <div class="imagen-registro">
@@ -98,10 +103,12 @@
             <p>&copy; 2024 CinemaFusion Films</p>
         </div>
     </footer>
-
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+        <script src="/js/pago.js"></script>
 </body>
 
 </html>
