--- a/carrito.html
+++ b/carrito.html
@@ -64,30 +64,11 @@
     <section class="container mt-5">
       <div class="row">
         <div class="col-md-7">
-          <div class="card mb-4 contenedor">
+          <div id="productos" class="card mb-4 contenedor">
             <h4 class="text-center"> Productos</h4>
             <hr>
-            <div class="row">
-              <img src="img/posters/terrifier.jpg" class="img-fluid col-md-4 mt-1" alt="Terrifier">
-              <div class="card-body col-md-8">
-                <h5>Nombre: Terrifier</h5>
-                <h5>Precio: $15.154</h5>
-                <div class="cards-button">
-                  <button class="btn btn-danger btn-rojo">Eliminar</button>
-                  <button class="btn btn-primary">Agregar a Favoritos</button>
-                </div>
-              </div>
-              <hr>
-              <img src="img/posters/inferno.jpg" class="img-fluid col-md-4 mt-1" alt="Inferno">
-              <div class="card-body col-md-8">
-                <h5>Nombre: Inferno</h5>
-                <h5>Precio: $6.555</h5>
-                <div class="cards-button">
-                  <button class="btn btn-danger btn-rojo">Eliminar</button>
-                  <button class="btn btn-primary">Agregar a Favoritos</button>
-                </div>
-              </div>
-              <hr>
+            <div id="producto-lista" class="row">
+                
             </div>
           </div>
         </div>
@@ -97,9 +78,9 @@
             <h4 class="text-center"> Resumen del Pedido</h4>
             <hr>
             <div class="card-body">
-              <h5>Subtotal: $21.709</h5>
+              <h5 id="subtotal">Subtotal: $0</h5>
               <h5>Impuesto Pais: 20%</h5>
-              <h5>Total: $26.050</h5>
+              <h5 id="total">Total: $0</h5>
               <a href="pago.html" class="btn btn-primary w-100 mt-3">Realizar Pago</a>
             </div>
           </div>
@@ -119,6 +100,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
+  <script src="./js/carrito.js"></script>
 </body>
 
 </html>
