Nuevas imagenes index

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="col-md-4">
           <div class="card">
             <a href="novedades.html">
-              <img src="../img/grid-inicio/novedades.jpg" class="card-img-top" alt="novedades-mini">
+              <img src="../img/grid-inicio/news.jpg" class="card-img-top" alt="novedades-mini">
             </a>
             <div class="card-body cuerpo-card">
               <a href="novedades.html">
@@ -130,7 +130,7 @@
         <div class="col-md-4">
           <div class="card">
             <a href="contacto.html">
-              <img src="../img/grid-inicio/contacto.jpg" class="card-img-top" alt="contacto-mini">
+              <img src="../img/grid-inicio/contact_us2.jpg" class="card-img-top" alt="contacto-mini">
             </a>
             <div class="card-body cuerpo-card">
               <a href="contacto.html">
@@ -154,7 +154,7 @@
         <div class="col-md-4">
           <div class="card">
             <a href="carrito.html">
-              <img src="../img/grid-inicio/carrito.jpg" class="card-img-top" alt="carrrito-mini">
+              <img src="../img/grid-inicio/carrito_compra.jpg" class="card-img-top" alt="carrrito-mini">
             </a>
             <div class="card-body cuerpo-card">
               <a href="carrito.html">
