--- a/favoritos.html
+++ b/favoritos.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Carrito</title>
+  <title>Favoritos</title>
   <link rel="icon" type="image/png" href="img/icon-fav.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="styles/styles-base.css">
-  <link rel="stylesheet" href="styles/styles-carrito.css">
+  <link rel="stylesheet" href="styles/styles-favoritos.css">
 </head>
 
 <body>
@@ -32,8 +32,8 @@
           <li><a href="novedades.html">NOVEDADES</a></li>
           <li><a href="contacto.html">CONTACTO</a></li>
           <li><a href="ingresar.html">INGRESAR</a></li>
-          <li><a href="favoritos.html">FAVORITOS</a></li>
-          <li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
+          <li><a href="#">FAVORITOS</a></li>
+          <li><a href="carrito.html"><i class="fas fa-shopping-cart"></i></a></li>
         </ul>
 
         <input type="checkbox" id="menu-toggle">
@@ -46,8 +46,8 @@
         <li><a href="novedades.html">NOVEDADES</a></li>
         <li><a href="contacto.html">CONTACTO</a></li>
         <li><a href="ingresar.html">INGRESAR</a></li>
-        <li><a href="favoritos.html">FAVORITOS</a></li>
-        <li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
+        <li><a href="#">FAVORITOS</a></li>
+        <li><a href="carrito.html"><i class="fas fa-shopping-cart"></i></a></li>
       </ul>
     </nav>
   </header>
@@ -59,38 +59,27 @@
 
     <section>
       <div class="banner">
-        <h2>CARRITO DE COMPRAS</h2>
+        <h2>Favoritos</h2>
       </div>
     </section>
 
-    <section class="container mt-5">
-      <div class="row">
-        <div class="col-md-7">
-          <div id="productos" class="card mb-4 contenedor">
-            <h4 class="text-center"> Productos</h4>
-            <hr>
-            <div id="producto-lista" class="row">
-                
-            </div>
+    <section id="favoritos" class="py-5">
+      <div class="container">
+        <div id="carouselFavoritos" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
           </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselFavoritos" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselFavoritos" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
-
-        <div class="col-md-5">
-          <div class="card contenedor">
-            <h4 class="text-center"> Resumen del Pedido</h4>
-            <hr>
-            <div class="card-body">
-              <h5 id="subtotal">Subtotal: $0</h5>
-              <h5>Impuesto Pais: 20%</h5>
-              <h5 id="total">Total: $0</h5>
-              <a href="pago.html" class="btn btn-primary w-100 mt-3">Realizar Pago</a>
-            </div>
-          </div>
-        </div>
-
       </div>
-
     </section>
+
   </main>
 
   <footer>
@@ -102,7 +91,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-  <script src="./js/carrito.js"></script>
+    <script src="/js/favs.js"></script>
 </body>
 
 </html>
