Ingresar, Registro, Recuperar pass, Agregar peliculas al carrito

--- a/carrito.html
+++ b/carrito.html
@@ -50,7 +50,7 @@
     </nav>
   </header>
 
-  <main>
+  <!-- <main>
     <a href="#top">
       <i class="fas fa-angle-double-up"></i>
     </a>
@@ -88,6 +88,35 @@
 
       </div>
 
+    </section>
+  </main> -->
+
+  <main>
+    <!-- Contenido principal del carrito -->
+    <section class="container mt-5">
+      <div class="row">
+        <div class="col-md-7">
+          <div id="productos" class="card mb-4 contenedor">
+            <h4 class="text-center"> Productos</h4>
+            <hr>
+            <div id="producto-lista" class="row">
+              <!-- Aquí se insertarán dinámicamente los productos -->
+            </div>
+          </div>
+        </div>
+        <div class="col-md-5">
+          <div class="card contenedor">
+            <h4 class="text-center"> Resumen del Pedido</h4>
+            <hr>
+            <div class="card-body">
+              <h5 id="subtotal">Subtotal: $0.00</h5>
+              <h5>Impuesto Pais: 20%</h5>
+              <h5 id="total">Total: $0.00</h5>
+              <a href="pago.html" class="btn btn-primary w-100 mt-3">Realizar Pago</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
   </main>
 
