--- a/ingresar.html
+++ b/ingresar.html
@@ -11,6 +11,8 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="styles/styles-base.css">
   <link rel="stylesheet" href="styles/styles-ingresar.css">
+  <link rel="stylesheet" href="styles/styles-formulario.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 
 <body>
@@ -66,23 +68,37 @@
         <div class="login-registro">
           <div class="login">
             <h3>Ingresa a tu cuenta</h3>
-            <label for="username">USUARIO</label>
-            <input type="text" id="username" name="username" required>
-            <label for="password">CONTRASEÑA</label>
-            <input type="password" id="password" name="password" required>
 
-            <button type="submit" class="btn btn-danger conocenos-btn">INGRESAR</button>
+            <form id="login-form" onsubmit="return validarLogin()">
+              <label for="username">USUARIO</label>
+              <input type="text" id="username" name="username" required>
+              <label for="password">CONTRASEÑA</label>
+              <input type="password" id="password" name="password" required>
+              <button type="submit" class="btn btn-danger conocenos-btn">INGRESAR</button>
+            </form>
+
             <p>
-              <a href="#">
-                <p>Olvidé mi contraseña</p>
-              </a>
+              <a href="#" onclick="mostrarFormularioRecuperar()">Olvidé mi contraseña</a>
             </p>
+
           </div>
 
           <div class="registro">
             <h3>No tenes cuenta?</h3>
-            <a href="registro.html" class="btn btn-danger">REGISTRARSE</a>
+            <a href="registro.html" class="btn btn-danger mb-5">REGISTRARSE</a>
           </div>
+
+          <section class="recuperar-contrasena" style="display: none;">
+            <div class="login">
+              <h3>Recuperar Contrasenia</h3>
+              <form onsubmit="return enviarSolicitud()">
+                <label for="email-recuperar">CORREO ELECTRONICO</label>
+                <input type="email" id="email-recuperar" class="form-control" required>
+                <button type="submit" class="btn btn-danger conocenos-btn">Enviar Solicitud</button>
+              </form>
+              <p id="mensaje-recuperar"></p>
+            </div>
+          </section>
         </div>
 
         <div class="imagen-ingresar">
@@ -90,7 +106,6 @@
         </div>
       </div>
     </section>
-
   </main>
 
   <footer>
@@ -102,6 +117,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+  <script src="/js/ingresar.js"></script>
 </body>
 
 </html>
