--- a/nuestras-peliculas/terrifier-2.html
+++ b/nuestras-peliculas/terrifier-2.html
@@ -95,9 +95,10 @@
                         </div>
                     </div>
 
-                    <div class="boton-carrito">
-                        <button type="button" class="btn btn-danger w-100">Agregar al carrito</button>
-                    </div>
+                    <button type="button" class="btn btn-danger w-100" id="btn-agregar-carrito-terrifier"
+                        data-nombre="Terrifier 2" data-precio="15154" data-poster="../img/posters/terrifier.jpg">
+                        Agregar al carrito
+                    </button>
                 </div>
             </div>
         </section>
@@ -236,6 +237,24 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="/js/carrito.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const btnAgregarCarrito = document.getElementById('btn-agregar-carrito-terrifier');
+    
+            if (btnAgregarCarrito) {
+                btnAgregarCarrito.addEventListener('click', () => {
+                    // Obtener los datos de los atributos data-
+                    const nombre = btnAgregarCarrito.getAttribute('data-nombre');
+                    const precio = parseInt(btnAgregarCarrito.getAttribute('data-precio'));
+                    const poster = btnAgregarCarrito.getAttribute('data-poster');
+    
+                    // Llamar a la función en carrito.js para guardar en localStorage
+                    agregarAlCarrito(nombre, precio, poster);
+                });
+            }
+        });
+    </script>
 </body>
 
 </html>
