--- a/registro.html
+++ b/registro.html
@@ -11,6 +11,8 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/styles-base.css">
     <link rel="stylesheet" href="styles/styles-registro.css">
+    <link rel="stylesheet" href="styles/styles-formulario.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 
 <body>
@@ -65,22 +67,25 @@
             <div class="main-registro">
                 <div class="registro">
                     <h3>Ingresa los siguientes datos</h3>
-                    <label for="username">USUARIO</label>
-                    <input type="text" id="username" name="username" required>
 
-                    <label for="email">EMAIL</label>
-                    <input type="email" id="email" name="email" required>
+                    <form onsubmit="return validarFormulario()">
+                        <label for="username">USUARIO</label>
+                        <input type="text" id="username" name="username" required>
 
-                    <label for="phone">NÚMERO DE TELÉFONO</label>
-                    <input type="tel" id="phone" name="phone" required>
+                        <label for="email">EMAIL</label>
+                        <input type="email" id="email" name="email" required>
 
-                    <label for="password">CONTRASEÑA</label>
-                    <input type="password" id="password" name="password" required>
+                        <label for="phone">NÚMERO DE TELÉFONO</label>
+                        <input type="tel" id="phone" name="phone" required>
 
-                    <label for="confirm-password">CONFIRMAR CONTRASEÑA</label>
-                    <input type="password" id="confirm-password" name="confirm-password" required>
+                        <label for="password">CONTRASEÑA</label>
+                        <input type="password" id="password" name="password" required>
 
-                    <button type="submit" class="btn btn-danger conocenos-btn">REGISTRARSE</button>
+                        <label for="confirm-password">CONFIRMAR CONTRASEÑA</label>
+                        <input type="password" id="confirm-password" name="confirm-password" required>
+
+                        <button type="submit" class="btn btn-danger conocenos-btn">REGISTRARSE</button>
+                    </form>
                 </div>
 
                 <div class="imagen-registro">
@@ -100,6 +105,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="/js/registro.js"></script>
 </body>
 
 </html>
