--- a/ingresar.html
+++ b/ingresar.html
@@ -94,7 +94,7 @@
               <form onsubmit="return enviarSolicitud()">
                 <label for="email-recuperar">CORREO ELECTRONICO</label>
                 <input type="email" id="email-recuperar" class="form-control" required>
-                <button type="submit" class="btn btn-danger conocenos-btn">Enviar Solicitud</button>
+                <button type="submit" class="btn btn-danger conocenos-btn">ENVIAR</button>
               </form>
               <p id="mensaje-recuperar"></p>
             </div>
