--- a/nuestras-peliculas/cuando-acecha-la-maldad.html
+++ b/nuestras-peliculas/cuando-acecha-la-maldad.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="../styles/styles-base.css">
     <link rel="stylesheet" href="../styles/styles-peliculas.css">
 </head>
@@ -97,7 +98,7 @@
                     </div>
 
                     <button type="button" class="btn btn-danger w-100" id="btn-agregar-carrito-acecha"
-                        data-nombre="Cuando Acecha la Maldad" data-precio="16520" data-poster="../img/posters/cuando-acecha.jpg">
+                        data-nombre="Cuando Acecha la Maldad" data-precio="16520" data-poster="../img/posters/cuando-acecha.jpg" data-movie-id="744857">
                         Agregar al carrito
                     </button>
                 </div>
@@ -116,38 +117,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>Demian Salomon</td>
-                                <td>Pedro</td>
-                            </tr>
-                            <tr>
-                                <td>Julieta Vallina</td>
-                                <td>Julia</td>
-                            </tr>
-                            <tr>
-                                <td>Ezequiel Rodríguez</td>
-                                <td>Mario</td>
-                            </tr>
-                            <tr>
-                                <td>Paula Brasca</td>
-                                <td>Ana</td>
-                            </tr>
-                            <tr>
-                                <td>Agustín Rittano</td>
-                                <td>Luciano</td>
-                            </tr>
-                            <tr>
-                                <td>Matías Desiderio</td>
-                                <td>Héctor</td>
-                            </tr>
-                            <tr>
-                                <td>Valeria Blanc</td>
-                                <td>Sandra</td>
-                            </tr>
-                            <tr>
-                                <td>Guillermo Pfenning</td>
-                                <td>Rodrigo</td>
-                            </tr>
+
                         </tbody>
                     </table>
                 </div>
@@ -155,16 +125,7 @@
                     <div class="sinopsis">
                         <h3>SINOPSIS</h3>
                         <p>
-                            En un remoto pueblo argentino, una familia se enfrenta a fuerzas sobrenaturales malignas
-                            cuando una entidad demoníaca comienza a sembrar el terror. Pedro, un hombre común, descubre
-                            que su hijo ha sido elegido como el próximo recipiente de esta entidad siniestra.
-                            Desesperado por salvar a su hijo, Pedro, junto con su esposa Julia y su hermano Mario, se
-                            embarcan en una lucha contra el tiempo para detener a la entidad antes de que consuma a su
-                            hijo por completo. Mientras tanto, el pueblo entero se ve sumido en el caos y el miedo,
-                            enfrentando eventos aterradores y fenómenos inexplicables. Con la ayuda de un grupo de
-                            amigos y vecinos, la familia debe enfrentar sus peores pesadillas y descubrir los oscuros
-                            secretos que rodean a la entidad demoníaca, mientras luchan por sobrevivir a su despiadada
-                            presencia.
+
                         </p>
                     </div>
                     <div class="puntuacionUsuario">
@@ -239,24 +200,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="/js/carrito.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const btnAgregarCarrito = document.getElementById('btn-agregar-carrito-acecha');
-    
-            if (btnAgregarCarrito) {
-                btnAgregarCarrito.addEventListener('click', () => {
-                    // Obtener los datos de los atributos data-
-                    const nombre = btnAgregarCarrito.getAttribute('data-nombre');
-                    const precio = parseInt(btnAgregarCarrito.getAttribute('data-precio'));
-                    const poster = btnAgregarCarrito.getAttribute('data-poster');
-    
-                    // Llamar a la función en carrito.js para guardar en localStorage
-                    agregarAlCarrito(nombre, precio, poster);
-                });
-            }
-        });
-    </script>
+    <script src="/js/pelicula.js"></script>
 </body>
 
 </html>
