--- a/nuestras-peliculas/inferno.html
+++ b/nuestras-peliculas/inferno.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="../styles/styles-base.css">
     <link rel="stylesheet" href="../styles/styles-peliculas.css">
 </head>
@@ -97,7 +98,7 @@
                     </div>
 
                     <button type="button" class="btn btn-danger w-100" id="btn-agregar-inferno"
-                        data-nombre="Inferno" data-precio="6555" data-poster="../img/posters/inferno.jpg">
+                        data-nombre="Inferno" data-precio="6555" data-poster="../img/posters/inferno.jpg" data-movie-id="16395">
                         Agregar al carrito
                     </button>
                 </div>
@@ -116,38 +117,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>Irene Miracle</td>
-                                <td>Rose Elliot</td>
-                            </tr>
-                            <tr>
-                                <td>Leigh McCloskey</td>
-                                <td>Mark Elliot</td>
-                            </tr>
-                            <tr>
-                                <td>Sacha Pitoëff</td>
-                                <td>Kazanian</td>
-                            </tr>
-                            <tr>
-                                <td>Alida Valli</td>
-                                <td>Carol</td>
-                            </tr>
-                            <tr>
-                                <td>Veronica Lazar</td>
-                                <td>Elise Stallone</td>
-                            </tr>
-                            <tr>
-                                <td>Gabriele Lavia</td>
-                                <td>Professor Arnold</td>
-                            </tr>
-                            <tr>
-                                <td>Feodor Chaliapin Jr.</td>
-                                <td>Old man</td>
-                            </tr>
-                            <tr>
-                                <td>Leopoldo Mastelloni</td>
-                                <td>Young man</td>
-                            </tr>
+
                         </tbody>
                     </table>
                 </div>
@@ -155,13 +125,7 @@
                     <div class="sinopsis">
                         <h3>SINOPSIS</h3>
                         <p>
-                            En Nueva York, una joven poeta llamada Rose Elliot descubre un libro antiguo que habla sobre
-                            los Tres Madres, tres brujas que gobiernan el dolor, la tristeza y la oscuridad. Convencida
-                            de que vive en un edificio habitado por una de las Tres Madres, Rose envía una carta
-                            desesperada a su hermano Mark, quien vive en Roma. Mientras investiga la historia de las
-                            Tres Madres, Mark descubre una red de secretos y muertes misteriosas que parecen estar
-                            conectadas con el edificio de su hermana. Pronto se ve envuelto en un mundo de horror y
-                            magia negra, donde las líneas entre la realidad y la fantasía se desdibujan peligrosamente.
+
                         </p>
                     </div>
                     <div class="puntuacionUsuario">
@@ -236,24 +200,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="/js/carrito.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const btnAgregarCarrito = document.getElementById('btn-agregar-inferno');
-    
-            if (btnAgregarCarrito) {
-                btnAgregarCarrito.addEventListener('click', () => {
-                    // Obtener los datos de los atributos data-
-                    const nombre = btnAgregarCarrito.getAttribute('data-nombre');
-                    const precio = parseInt(btnAgregarCarrito.getAttribute('data-precio'));
-                    const poster = btnAgregarCarrito.getAttribute('data-poster');
-    
-                    // Llamar a la función en carrito.js para guardar en localStorage
-                    agregarAlCarrito(nombre, precio, poster);
-                });
-            }
-        });
-    </script>
+    <script src="/js/pelicula.js"></script>
 </body>
 
 </html>
