--- a/nuestras-peliculas/midsommar.html
+++ b/nuestras-peliculas/midsommar.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="../styles/styles-base.css">
     <link rel="stylesheet" href="../styles/styles-peliculas.css">
 </head>
@@ -97,7 +98,7 @@
                     </div>
 
                     <button type="button" class="btn btn-danger w-100" id="btn-agregar-midsommar"
-                        data-nombre="Midsommar" data-precio="9100" data-poster="../img/posters/midsommar.jpg">
+                        data-nombre="Midsommar" data-precio="9100" data-poster="../img/posters/midsommar.jpg" data-movie-id="530385">
                         Agregar al carrito
                     </button>
                 </div>
@@ -116,38 +117,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>Florence Pugh</td>
-                                <td>Dani Ardor</td>
-                            </tr>
-                            <tr>
-                                <td>Jack Reynor</td>
-                                <td>Christian Hughes</td>
-                            </tr>
-                            <tr>
-                                <td>Vilhelm Blomgren</td>
-                                <td>Pelle</td>
-                            </tr>
-                            <tr>
-                                <td>William Jackson Harper</td>
-                                <td>Josh</td>
-                            </tr>
-                            <tr>
-                                <td>Will Poulter</td>
-                                <td>Mark</td>
-                            </tr>
-                            <tr>
-                                <td>Ellora Torchia</td>
-                                <td>Connie</td>
-                            </tr>
-                            <tr>
-                                <td>Archie Madekwe</td>
-                                <td>Simon</td>
-                            </tr>
-                            <tr>
-                                <td>Isabelle Grill</td>
-                                <td>Maja</td>
-                            </tr>
+
                         </tbody>
                     </table>
                 </div>
@@ -155,14 +125,7 @@
                     <div class="sinopsis">
                         <h3>SINOPSIS</h3>
                         <p>
-                            Después de sufrir una tragedia familiar, Dani Ardor decide acompañar a su novio Christian y
-                            sus amigos a un remoto pueblo en Suecia para asistir a un festival de verano que se celebra
-                            cada 90 años. Lo que comienza como unas vacaciones tranquilas y pintorescas en un lugar
-                            idílico, pronto se convierte en una pesadilla perturbadora cuando los rituales paganos del
-                            festival se revelan como eventos violentos y siniestros. A medida que los residentes del
-                            pueblo muestran su verdadera naturaleza, Dani y sus amigos se ven atrapados en una serie de
-                            ceremonias aterradoras. Dani debe enfrentar sus propios traumas y miedos, mientras intenta
-                            desentrañar los oscuros secretos del pueblo y sobrevivir a la espeluznante celebración.
+
                         </p>
                     </div>
                     <div class="puntuacionUsuario">
@@ -237,24 +200,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="/js/carrito.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const btnAgregarCarrito = document.getElementById('btn-agregar-midsommar');
-    
-            if (btnAgregarCarrito) {
-                btnAgregarCarrito.addEventListener('click', () => {
-                    // Obtener los datos de los atributos data-
-                    const nombre = btnAgregarCarrito.getAttribute('data-nombre');
-                    const precio = parseInt(btnAgregarCarrito.getAttribute('data-precio'));
-                    const poster = btnAgregarCarrito.getAttribute('data-poster');
-    
-                    // Llamar a la función en carrito.js para guardar en localStorage
-                    agregarAlCarrito(nombre, precio, poster);
-                });
-            }
-        });
-    </script>
+    <script src="/js/pelicula.js"></script>
 </body>
 
 </html>
