--- a/nuestras-peliculas/rosemary's-baby.html
+++ b/nuestras-peliculas/rosemary's-baby.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="../styles/styles-base.css">
     <link rel="stylesheet" href="../styles/styles-peliculas.css">
 </head>
@@ -97,7 +98,7 @@
                     </div>
 
                     <button type="button" class="btn btn-danger w-100" id="btn-agregar-rose"
-                        data-nombre="Rosemary's Baby" data-precio="8200" data-poster="../img/posters/rosemary.webp">
+                        data-nombre="Rosemary's Baby" data-precio="8200" data-poster="../img/posters/rosemary.webp" data-movie-id="805">
                         Agregar al carrito
                     </button>
                 </div>
@@ -116,38 +117,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>Mia Farrow</td>
-                                <td>Rosemary Woodhouse</td>
-                            </tr>
-                            <tr>
-                                <td>John Cassavetes</td>
-                                <td>Guy Woodhouse</td>
-                            </tr>
-                            <tr>
-                                <td>Ruth Gordon</td>
-                                <td>Minnie Castevet</td>
-                            </tr>
-                            <tr>
-                                <td>Sidney Blackmer</td>
-                                <td>Roman Castevet</td>
-                            </tr>
-                            <tr>
-                                <td>Maurice Evans</td>
-                                <td>Hutch</td>
-                            </tr>
-                            <tr>
-                                <td>Ralph Bellamy</td>
-                                <td>Dr. Sapirstein</td>
-                            </tr>
-                            <tr>
-                                <td>Victoria Vetri</td>
-                                <td>Terry Gionoffrio</td>
-                            </tr>
-                            <tr>
-                                <td>Patsy Kelly</td>
-                                <td>Laura-Louise McBirney</td>
-                            </tr>
+
                         </tbody>
                     </table>
                 </div>
@@ -155,12 +125,7 @@
                     <div class="sinopsis">
                         <h3>SINOPSIS</h3>
                         <p>
-                            Rosemary Woodhouse y su esposo, Guy, se mudan a un nuevo apartamento en Nueva York, donde
-                            hacen amistad con sus vecinos, los Castevet. Después de una serie de eventos extraños,
-                            Rosemary queda embarazada, pero su embarazo se vuelve cada vez más inquietante, y comienza a
-                            sospechar que los Castevet y otros vecinos tienen motivos ocultos con respecto a su bebé. A
-                            medida que su embarazo avanza, Rosemary se sumerge en una espiral de paranoia y miedo, sin
-                            saber en quién confiar ni qué hacer para proteger a su hijo no nacido.
+
                         </p>
                     </div>
                     <div class="puntuacionUsuario">
@@ -235,24 +200,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="/js/carrito.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const btnAgregarCarrito = document.getElementById('btn-agregar-rose');
-    
-            if (btnAgregarCarrito) {
-                btnAgregarCarrito.addEventListener('click', () => {
-                    // Obtener los datos de los atributos data-
-                    const nombre = btnAgregarCarrito.getAttribute('data-nombre');
-                    const precio = parseInt(btnAgregarCarrito.getAttribute('data-precio'));
-                    const poster = btnAgregarCarrito.getAttribute('data-poster');
-    
-                    // Llamar a la función en carrito.js para guardar en localStorage
-                    agregarAlCarrito(nombre, precio, poster);
-                });
-            }
-        });
-    </script>
+    <script src="/js/pelicula.js"></script>
 </body>
 
 </html>
