--- a/nuestras-peliculas/smile.html
+++ b/nuestras-peliculas/smile.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="../styles/styles-base.css">
     <link rel="stylesheet" href="../styles/styles-peliculas.css">
 </head>
@@ -97,7 +98,7 @@
                     </div>
 
                     <button type="button" class="btn btn-danger w-100" id="btn-agregar-smile"
-                        data-nombre="Smile" data-precio="13300" data-poster="../img/posters/smile.jpg">
+                        data-nombre="Smile" data-precio="13300" data-poster="../img/posters/smile.jpg" data-movie-id="882598">
                         Agregar al carrito
                     </button>
                 </div>
@@ -116,38 +117,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>Sosie Bacon</td>
-                                <td>Dr. Rose Cotter</td>
-                            </tr>
-                            <tr>
-                                <td>Jessie T. Usher</td>
-                                <td>Trevor</td>
-                            </tr>
-                            <tr>
-                                <td>Kyle Gallner</td>
-                                <td>Joel</td>
-                            </tr>
-                            <tr>
-                                <td>Robin Weigert</td>
-                                <td>Dr. Madeline Northcott</td>
-                            </tr>
-                            <tr>
-                                <td>Caitlin Stasey</td>
-                                <td>Laura Weaver</td>
-                            </tr>
-                            <tr>
-                                <td>Kal Penn</td>
-                                <td>Dr. Morgan Desai</td>
-                            </tr>
-                            <tr>
-                                <td>Rob Morgan</td>
-                                <td>Robert Talley</td>
-                            </tr>
-                            <tr>
-                                <td>Judy Reyes</td>
-                                <td>Victoria Muñoz</td>
-                            </tr>
+
                         </tbody>
                     </table>
                 </div>
@@ -155,16 +125,7 @@
                     <div class="sinopsis">
                         <h3>SINOPSIS</h3>
                         <p>
-                            La Dra. Rose Cotter, una psiquiatra dedicada, se ve envuelta en un misterio aterrador cuando
-                            una de sus pacientes se suicida de manera violenta frente a ella tras afirmar que una
-                            entidad maligna la está persiguiendo. A raíz de este trágico evento, Rose comienza a
-                            experimentar visiones aterradoras y encuentros inexplicables, todos marcados por la
-                            siniestra sonrisa de sus víctimas. Mientras investiga desesperadamente para entender y
-                            detener la maldición que ahora la persigue, Rose descubre que esta entidad se alimenta del
-                            trauma y el miedo, pasando de una víctima a otra. Con el tiempo en su contra y la cordura
-                            desvaneciéndose, Rose debe enfrentarse a sus propios demonios y desentrañar el oscuro
-                            secreto detrás de la entidad sonriente, mientras lucha por sobrevivir y evitar que su vida
-                            termine en una sonrisa macabra.
+
                         </p>
                     </div>
                     <div class="puntuacionUsuario">
@@ -239,24 +200,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="/js/carrito.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const btnAgregarCarrito = document.getElementById('btn-agregar-smile');
-    
-            if (btnAgregarCarrito) {
-                btnAgregarCarrito.addEventListener('click', () => {
-                    // Obtener los datos de los atributos data-
-                    const nombre = btnAgregarCarrito.getAttribute('data-nombre');
-                    const precio = parseInt(btnAgregarCarrito.getAttribute('data-precio'));
-                    const poster = btnAgregarCarrito.getAttribute('data-poster');
-    
-                    // Llamar a la función en carrito.js para guardar en localStorage
-                    agregarAlCarrito(nombre, precio, poster);
-                });
-            }
-        });
-    </script>
+    <script src="/js/pelicula.js"></script>
 </body>
 
 </html>
