--- a/nuestras-peliculas/suspiria.html
+++ b/nuestras-peliculas/suspiria.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"> 
     <link rel="stylesheet" href="../styles/styles-base.css">
     <link rel="stylesheet" href="../styles/styles-peliculas.css">
 </head>
@@ -97,7 +98,7 @@
                     </div>
 
                     <button type="button" class="btn btn-danger w-100" id="btn-agregar-suspiria"
-                        data-nombre="Suspiria" data-precio="8500" data-poster="../img/posters/suspiria.jpg">
+                        data-nombre="Suspiria" data-precio="8500" data-poster="../img/posters/suspiria.jpg" data-movie-id="11906">
                         Agregar al carrito
                     </button>
                 </div>
@@ -116,38 +117,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>Jessica Harper</td>
-                                <td>Suzy Bannion</td>
-                            </tr>
-                            <tr>
-                                <td>Stefania Casini</td>
-                                <td>Sarah</td>
-                            </tr>
-                            <tr>
-                                <td>Flavio Bucci</td>
-                                <td>Daniel</td>
-                            </tr>
-                            <tr>
-                                <td>Miguel Bosé</td>
-                                <td>Mark</td>
-                            </tr>
-                            <tr>
-                                <td>Alida Valli</td>
-                                <td>Miss Tanner</td>
-                            </tr>
-                            <tr>
-                                <td>Joan Bennett</td>
-                                <td>Madame Blanc</td>
-                            </tr>
-                            <tr>
-                                <td>Barbara Magnolfi</td>
-                                <td>Olga</td>
-                            </tr>
-                            <tr>
-                                <td>Rudolf Schündler</td>
-                                <td>Profesor Milius</td>
-                            </tr>
+
                         </tbody>
                     </table>
                 </div>
@@ -155,14 +125,7 @@
                     <div class="sinopsis">
                         <h3>SINOPSIS</h3>
                         <p>
-                            Suzy Bannion, una joven bailarina americana, llega a Friburgo para unirse a una prestigiosa
-                            academia de danza. Pronto descubre que la academia está dirigida por un grupo de brujas que
-                            practican la magia negra. Cuando una serie de violentos asesinatos comienzan a ocurrir en la
-                            academia, Suzy debe enfrentarse a la terrorífica verdad detrás de la aparentemente
-                            respetable institución. Con la ayuda de una amiga y un psiquiatra, Suzy se adentra en un
-                            mundo de horror y oscuridad donde las brujas buscan mantener su poder a cualquier costo.
-                            Enfrentando a enemigos sobrenaturales y luchando por su propia supervivencia, Suzy se ve
-                            atrapada en una pesadilla de la que puede que no logre escapar.
+
                         </p>
                     </div>
                     <div class="puntuacionUsuario">
@@ -237,24 +200,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script> 
     <script src="/js/carrito.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const btnAgregarCarrito = document.getElementById('btn-agregar-suspiria');
-    
-            if (btnAgregarCarrito) {
-                btnAgregarCarrito.addEventListener('click', () => {
-                    // Obtener los datos de los atributos data-
-                    const nombre = btnAgregarCarrito.getAttribute('data-nombre');
-                    const precio = parseInt(btnAgregarCarrito.getAttribute('data-precio'));
-                    const poster = btnAgregarCarrito.getAttribute('data-poster');
-    
-                    // Llamar a la función en carrito.js para guardar en localStorage
-                    agregarAlCarrito(nombre, precio, poster);
-                });
-            }
-        });
-    </script>
+    <script src="/js/pelicula.js"></script>
 </body>
 
 </html>
