--- a/nuestras-peliculas/the-exorcist.html
+++ b/nuestras-peliculas/the-exorcist.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="../styles/styles-base.css">
     <link rel="stylesheet" href="../styles/styles-peliculas.css">
 </head>
@@ -97,7 +98,7 @@
                     </div>
 
                     <button type="button" class="btn btn-danger w-100" id="btn-agregar-exorcist"
-                        data-nombre="The Exorcist" data-precio="7500" data-poster="../img/posters/exorcist.jpg">
+                        data-nombre="The Exorcist" data-precio="7500" data-poster="../img/posters/exorcist.jpg" data-movie-id="9552">
                         Agregar al carrito
                     </button>
                 </div>
@@ -116,38 +117,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>Linda Blair</td>
-                                <td>Regan MacNeil</td>
-                            </tr>
-                            <tr>
-                                <td>Ellen Burstyn</td>
-                                <td>Chris MacNeil</td>
-                            </tr>
-                            <tr>
-                                <td>Max von Sydow</td>
-                                <td>Padre Merrin</td>
-                            </tr>
-                            <tr>
-                                <td>Jason Miller</td>
-                                <td>Padre Karras</td>
-                            </tr>
-                            <tr>
-                                <td>Lee J. Cobb</td>
-                                <td>Teniente Kinderman</td>
-                            </tr>
-                            <tr>
-                                <td>Kitty Winn</td>
-                                <td>Sharon Spencer</td>
-                            </tr>
-                            <tr>
-                                <td>Jack MacGowran</td>
-                                <td>Burke Dennings</td>
-                            </tr>
-                            <tr>
-                                <td>William O'Malley</td>
-                                <td>Padre Dyer</td>
-                            </tr>
+
                         </tbody>
                     </table>
                 </div>
@@ -155,14 +125,7 @@
                     <div class="sinopsis">
                         <h3>SINOPSIS</h3>
                         <p>
-                            En Georgetown, Washington D.C., la actriz Chris MacNeil se preocupa por el extraño
-                            comportamiento de su hija de doce años, Regan. Regan se vuelve cada vez más violenta y
-                            muestra habilidades sobrenaturales que desconciertan a los médicos. Convencida de que Regan
-                            está poseída por una entidad demoníaca, Chris busca la ayuda de dos sacerdotes católicos, el
-                            padre Damien Karras y el experimentado exorcista padre Lankester Merrin. A medida que el
-                            exorcismo se intensifica, los sacerdotes se enfrentan a fuerzas oscuras más allá de su
-                            comprensión y se ven obligados a luchar por el alma de Regan, así como por sus propias
-                            creencias y vidas.
+
                         </p>
                     </div>
                     <div class="puntuacionUsuario">
@@ -237,24 +200,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="/js/carrito.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const btnAgregarCarrito = document.getElementById('btn-agregar-exorcist');
-    
-            if (btnAgregarCarrito) {
-                btnAgregarCarrito.addEventListener('click', () => {
-                    // Obtener los datos de los atributos data-
-                    const nombre = btnAgregarCarrito.getAttribute('data-nombre');
-                    const precio = parseInt(btnAgregarCarrito.getAttribute('data-precio'));
-                    const poster = btnAgregarCarrito.getAttribute('data-poster');
-    
-                    // Llamar a la función en carrito.js para guardar en localStorage
-                    agregarAlCarrito(nombre, precio, poster);
-                });
-            }
-        });
-    </script>
+    <script src="/js/pelicula.js"></script>
 </body>
 
 </html>
