Eliminar de carrito, Validacion e Imagen responsive carrito

--- a/carrito.html
+++ b/carrito.html
@@ -32,7 +32,6 @@
           <li><a href="novedades.html">NOVEDADES</a></li>
           <li><a href="contacto.html">CONTACTO</a></li>
           <li><a href="ingresar.html">INGRESAR</a></li>
-          <li><a href="favoritos.html">FAVORITOS</a></li>
           <li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
         </ul>
 
@@ -46,54 +45,19 @@
         <li><a href="novedades.html">NOVEDADES</a></li>
         <li><a href="contacto.html">CONTACTO</a></li>
         <li><a href="ingresar.html">INGRESAR</a></li>
-        <li><a href="favoritos.html">FAVORITOS</a></li>
         <li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
       </ul>
     </nav>
   </header>
-
-  <!-- <main>
+  <main>
     <a href="#top">
       <i class="fas fa-angle-double-up"></i>
     </a>
-
     <section>
       <div class="banner">
-        <h2>CARRITO DE COMPRAS</h2>
+        <h2>CARRITO</h2>
       </div>
     </section>
-
-    <section class="container mt-5">
-      <div class="row">
-        <div class="col-md-7">
-          <div id="productos" class="card mb-4 contenedor">
-            <h4 class="text-center"> Productos</h4>
-            <hr>
-            <div id="producto-lista" class="row">
-                
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-5">
-          <div class="card contenedor">
-            <h4 class="text-center"> Resumen del Pedido</h4>
-            <hr>
-            <div class="card-body">
-              <h5 id="subtotal">Subtotal: $0</h5>
-              <h5>Impuesto Pais: 20%</h5>
-              <h5 id="total">Total: $0</h5>
-              <a href="pago.html" class="btn btn-primary w-100 mt-3">Realizar Pago</a>
-            </div>
-          </div>
-        </div>
-
-      </div>
-
-    </section>
-  </main> -->
-
-  <main>
     <!-- Contenido principal del carrito -->
     <section class="container mt-5">
       <div class="row">
